--- a/index.html
+++ b/index.html
@@ -7,6 +7,116 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <nav>
+        <a href="/index.html">Webstudio</a>
+
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="">info@devstudio.com</a></li>
+        <li><a href="">+11 (000) 111-11-11</a></li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button>Order Service</button>
+      </section>
+
+      <section>
+        <h2 hidden>features</h2>
+
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="/images/photo1.jpg"
+              alt="monitor of computer"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/photo2.jpg"
+              alt="step-by-step instructions for services"
+              width="360"
+            />
+          </li>
+          <li>
+            <img src="/images/photo3.jpg" alt="phone in hand" width="360" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="/images/img.jpg" alt="employee photo" width="264" />
+          </li>
+          <li>
+            <img src="/images/img (1).jpg" alt="employee photo" width="264" />
+          </li>
+
+          <li>
+            <img src="/images/img (2).jpg" alt="employee photo" width="264" />
+          </li>
+          <li>
+            <img src="/images/img (3).jpg" alt="employee photo" width="264" />
+          </li>
+        </ul>
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
+      </section>
+    </main>
+    <footer>
+      <a href="">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
