--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
         <ul>
           <li>
             <img
-              src="/images/photo1.jpg"
+              src="./images/photo1.jpg"
               alt="monitor of computer"
               width="360"
             />
           </li>
           <li>
             <img
-              src="/images/photo2.jpg"
+              src="./images/photo2.jpg"
               alt="step-by-step instructions for services"
               width="360"
             />
           </li>
           <li>
-            <img src="/images/photo3.jpg" alt="phone in hand" width="360" />
+            <img src="./images/photo3.jpg" alt="phone in hand" width="360" />
           </li>
         </ul>
       </section>
@@ -88,17 +88,17 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="/images/img.jpg" alt="employee photo" width="264" />
+            <img src="./images/img.jpg" alt="employee photo" width="264" />
           </li>
           <li>
-            <img src="/images/img (1).jpg" alt="employee photo" width="264" />
+            <img src="./images/img (1).jpg" alt="employee photo" width="264" />
           </li>
 
           <li>
-            <img src="/images/img (2).jpg" alt="employee photo" width="264" />
+            <img src="./images/img (2).jpg" alt="employee photo" width="264" />
           </li>
           <li>
-            <img src="/images/img (3).jpg" alt="employee photo" width="264" />
+            <img src="./images/img (3).jpg" alt="employee photo" width="264" />
           </li>
         </ul>
         <h3>Mark Guerrero</h3>
