--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="/index.html">Webstudio</a>
+        <a href="./index.html">Webstudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -17,15 +17,17 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="">info@devstudio.com</a></li>
+          <li><a href="">+11(000)111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <input type="button" />Order Service
       </section>
 
       <section>
@@ -88,6 +90,18 @@
         <h2>Our Team</h2>
         <ul>
           <li>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
             <img src="./images/img.jpg" alt="employee photo" width="264" />
           </li>
           <li>
@@ -101,18 +115,10 @@
             <img src="./images/img (3).jpg" alt="employee photo" width="264" />
           </li>
         </ul>
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
