--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <input type="button" />Order Service
+        <button type="button">Order Service</button>
       </section>
 
       <section>
@@ -105,14 +105,14 @@
             <img src="./images/img.jpg" alt="employee photo" width="264" />
           </li>
           <li>
-            <img src="./images/img (1).jpg" alt="employee photo" width="264" />
+            <img src="./images/img(1).jpg" alt="employee photo" width="264" />
           </li>
 
           <li>
-            <img src="./images/img (2).jpg" alt="employee photo" width="264" />
+            <img src="./images/img(2).jpg" alt="employee photo" width="264" />
           </li>
           <li>
-            <img src="./images/img (3).jpg" alt="employee photo" width="264" />
+            <img src="./images/img(3).jpg" alt="employee photo" width="264" />
           </li>
         </ul>
       </section>
