--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">Webstudio</a>
+        <a href="./index.html"> WebStudio </a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -18,15 +18,14 @@
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="">info@devstudio.com</a></li>
-          <li><a href="">+11(000)111-11-11</a></li>
-        </ul>
+        <a href="">info@devstudio.com</a>
+        <a href="">+11(000)1111111</a>
       </address>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
+
         <button type="button">Order Service</button>
       </section>
 
@@ -90,29 +89,24 @@
         <h2>Our Team</h2>
         <ul>
           <li>
+            <img src="./images/img.jpg" alt="employee photo" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <img src="./images/img.jpg" alt="employee photo" width="264" />
           </li>
           <li>
             <img src="./images/img(1).jpg" alt="employee photo" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
-
           <li>
             <img src="./images/img(2).jpg" alt="employee photo" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img(3).jpg" alt="employee photo" width="264" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
