--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"> WebStudio </a>
+        <a href="./index.html">WebStudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -18,8 +18,14 @@
         </ul>
       </nav>
       <address>
-        <a href="">info@devstudio.com</a>
-        <a href="">+11(000)1111111</a>
+        <ul>
+          <li>
+            <a href="info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="+11(000)111-11-11">+11(000)111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
     <main>
@@ -94,17 +100,17 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img(1).jpg" alt="employee photo" width="264" />
+            <img src="./images/img (1).jpg" alt="employee photo" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img(2).jpg" alt="employee photo" width="264" />
+            <img src="./images/img (2).jpg" alt="employee photo" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img(3).jpg" alt="employee photo" width="264" />
+            <img src="./images/img (3).jpg" alt="employee photo" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
