--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <address>
         <ul>
           <li>
-            <a href="info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="+11(000)111-11-11">+11(000)111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -95,22 +95,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img.jpg" alt="employee photo" width="264" />
+            <img src="./images/img-1.jpg" alt="employee photo" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img (1).jpg" alt="employee photo" width="264" />
+            <img src="./images/img-2.jpg" alt="employee photo" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img (2).jpg" alt="employee photo" width="264" />
+            <img src="./images/img-3.jpg" alt="employee photo" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img (3).jpg" alt="employee photo" width="264" />
+            <img src="./images/img-4.jpg" alt="employee photo" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
